2009-10-21  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/abi/mangle33.C: New test.

2009-10-20  Joseph Myers  <joseph@codesourcery.com>

	* gcc.target/arm/neon-thumb2-move.c: New test.

2009-10-19  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/cleanup-13.c: New test.

2009-10-19  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41755
	* gfortran.dg/equiv_8.f90: New test.

2009-10-15  Jason Merrill  <jason@redhat.com>

	PR c++/38798
	* g++.dg/cpp0x/trailing5.C: New.

2009-10-14  Larry Evans  <cppljevans@suddenlink.net>

	* g++.dg/cpp0x/vt-40092.C: New.

2009-10-12  Jason Merrill  <jason@redhat.com>

	PR c++/37875
	* g++.dg/cpp0x/decltype18.C: New.

	PR c++/37766
	* g++.dg/cpp0x/fntmpdefarg1.C: New.

2009-10-11  Jason Merrill  <jason@redhat.com>

	PR c++/37204
	* g++.dg/cpp0x/rv-reinterpret.C: New.

2009-10-16  H.J. Lu  <hongjiu.lu@intel.com>

	* g++.dg/debug/dwarf2/template-params-7.C: Removed.
	* gfortran.dg/fmt_error_9.f: Likewise.

2009-10-15  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-10-13  Martin Jambor  <mjambor@suse.cz>

	* gcc.c-torture/compile/pr41661.c: New test.

	2009-10-12  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/41683
	* gfortran.dg/fmt_error_9.f: Add check for repeat count after P.

	2009-10-12  Dodji Seketeli  <dodji@redhat.com>

	PR c++/41570
	* g++.dg/debug/dwarf2/template-params-7.C: New test.

	2009-10-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41555
	* gcc.dg/torture/pr41555.c: New testcase.

	2009-10-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41634
	* gcc.c-torture/compile/pr41634.c: New testcase.

	2009-10-08  Michael Matz  <matz@suse.de>

	PR middle-end/41573
	* gcc.dg/pr41573.c: New test.

	2009-10-07  Joseph Myers  <joseph@codesourcery.com>

	PR c/41182
	* gcc.c-torture/compile/pr41182-1.c: New.

2009-10-15  Release Manager

	* GCC 4.4.2 released.

2009-10-14  Hans-Peter Nilsson  <hp@axis.com>

	PR target/38948
	* gcc.dg/torture/pr38948.c: New test.
